Bug 326178 - No feedback provided when retrieving updated sources after sources change
Summary: No feedback provided when retrieving updated sources after sources change
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: discover (other bugs)
Version First Reported In: 2.0.65
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-18 02:02 UTC by Scott Kitterman
Modified: 2014-01-14 01:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Scott Kitterman 2013-10-18 02:02:28 UTC
After software sources are changed, Muon discover (or software-properties-kde, I'm not sure which) triggers an update to get the local package cache in sync with the configured sources.  This is good.  The absolute lack of feedback that anything is happening in conjunction with the lack of a way for a user to trigger a manual update leaves the user hanging with no idea what's happening.

Reproducible: Always
Comment 1 Aleix Pol 2014-01-14 01:04:14 UTC
Git commit 178fe9ae1b6c036a5f19d878d1114773bf187c5b by Aleix Pol.
Committed on 14/01/2014 at 00:59.
Pushed by apol into branch 'master'.

Reload origins when new information is fetched

M  +2    -5    libmuonapt/declarative/OriginsBackend.cpp

http://commits.kde.org/muon/178fe9ae1b6c036a5f19d878d1114773bf187c5b