Reload origins when new information is fetched

BUG: 326178